<resources>
    <string name="app_in_categories_st">Ремонт и строительство</string>
    <string name="app_in_categories_cl">Уборка и чистка</string>
    <string name="app_order_create_button">Заказать</string>
    <string name="app_name">HomeWorkers2</string>
    <string name="app_in_name">Алматы</string>
    <string name="app_welc_name">Welcome</string>
    <string name="app_phone_name">Phone</string>
    <string name="app_passw_name">Password</string>
    <string name="app_in_log">Войти</string>
    <string name="app_no_passw">Забыл пароль ?</string>
    <string name="app_in_registr">Регистрация</string>
    <string name="app_in_registr2">Зарегистрироваться</string>
    <string name="app_phone_name2">+7</string>
    <string name="app_phone_name3">+ 7 705 716 33 97</string>
    <string name="app_in_fam">Фамилия</string>
    <string name="app_in_famname">Имя</string>
    <string name="app_in_fampassw">Пароль</string>
    <string name="app_in_famnewpassw">Новый пароль</string>
    <string name="app_in_nowpassw">Восстановление пароля</string>
    <string name="app_in_nowpassw1">Введите номер</string>
    <string name="app_in_nowpasswdalee">Далее</string>
    <string name="app_in_nowpasswback">Перейти на страницу входа</string>
    <string name="app_in_smscode">Введите код смс</string>
    <string name="app_in_services">Услуги</string>
    <string name="app_in_services1">Заказ</string>
    <string name="app_in_services2">Заказы</string>
    <string name="app_in_services3">Главная</string>
    <string name="pod">Поддержка</string>
    <string name="opr">О приложении</string>
    <string name="account_name1">Иван</string>
    <string name="account_name2">Соболь</string>
    <string name="account_name12">Соболь Иван</string>
    <string name="account_nomer">Номер телефона</string>
    <string name="account_sohr">Сохранить</string>
    <string name="exit">Выход</string>
    <string name="aplication_1">Условия использования</string>
    <string name="employee_1">Валерий Дмитриевич</string>
    <string name="employee_2">Сфера деят-ти: электрик</string>
    <string name="employee_3">Вызов</string>
    <string name="employee_star_1">5.7</string>
    <string name="telephone1">Позвонить</string>
    <string name="telephone2">Написать в WhatsApp</string>
    <string name="choice_1">Выбрать услугу</string>

    <string name="aplication_big">Политика конфиденциальности.

Настоящая Политика конфиденциальности применяется ко всем Пользователям Интернет-ресурсов и Сервисов Компании.

Пользователи прямо соглашаются на обработку своих персональных данных, как это описано в настоящей Политике. Обработка означает любую операцию с персональными данными независимо от используемых средств и процедуры, в частности сбор, запись, систематизацию, накопление, хранение, уточнение, обновление, изменение и извлечение персональных данных, а также их использование, передачу, распространение, предоставление, доступ, обезличивание, блокирование, удаление и уничтожение.

Компания является контролером данных, отвечает за цели обработки персональных данных Пользователей и может передавать персональные данные или поручать их обработку любой третьей стороне, в том числе зарубежным компаниям-партнерам по аналитике и коммуникационным системам (чат с Пользователем), в порядке предусмотренном законодательством.
    Сбор персональных данных
В связи с предоставлением доступа к Сервису, Компания обрабатывает следующие персональные данные Пользователей:

Клиентов Сервиса:

имя;фамилия;
сведения о половой принадлежности;
отзывы;
фотоизображение; Использование

Главная цель Компании при сборе персональных данных — предоставление Пользователям безопасных и эффективных Услуг, в том числе удобного клиентского сервиса, при этом Компания ни при каких обстоятельствах не публикует личные и конфиденциальные данные, связанные с финансовой или платежной деятельностью, а также номера официальных удостоверений личности. Пользователи соглашаются с тем, что Компания также может использовать их персональные данные для:

исполнения Условий использования с Пользователями;
предоставления коммуникационных возможностей и улучшения качества обслуживания между Пользователями и Компанией посредством внедренного в приложении чата;
разрешения споров, сбора отзывов и выявления неисправностей;
анализа и совершенствования услуг, и информационного наполнения;Безопасность

Персональные данные Пользователей хранятся в информационных системах Компании и сохраняются различными способами (пароли, ограничение доступа связанных компаний, сотрудников и подрядчиков и т.д.) для защиты персональных данных Пользователей от несанкционированного доступа и разглашения.

Использование, передача, распространение, предоставление, доступ, обезличивание, блокирование, удаление и уничтожение персональных данных Пользователей осуществляются только на основании решений уполномоченных представителей Компании в соответствии с требованиями применимого законодательства и законными интересами Пользователей.</string>
    <string name="non_login">Неверный логин или пароль</string>
    <string name="app_in_code">Введите код</string>
    <string name="app_code_name">code</string>
    <string name="app_code_send_button">Отправить</string>
    <string name="app_repeat_password">Repeat password</string>
    <string name="app_new_passwrod_name">New password</string>

</resources>