<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="734dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/almaty"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/text_background"
            android:drawableStart="@drawable/ic_plane"
            android:drawablePadding="-8dp"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="337dp"
            android:layout_height="259dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            app:srcCompat="@drawable/rectangle1" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="133dp"
            android:layout_height="30dp"
            android:text="@string/app_welc_name"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_phone_name"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/text2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/button3"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_passw_name"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="239dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/gradient2"
            android:text="@string/app_in_log"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_forgot_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="11dp"
                android:textColor="@color/darkgrey"
                android:text="@string/app_no_passw"
                android:layout_marginRight="40dp"
                android:background="@drawable/no_passw" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="11dp"
                android:textColor="@color/darkgrey"
                android:text="@string/app_in_registr"
                android:background="@drawable/registr1" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
