<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/bakeButton2"
            android:layout_width="34dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back" />

        <ImageButton
            android:id="@+id/image_photo"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            android:background="@color/transparent"
            app:srcCompat="@drawable/maleuser"
            android:scaleType="fitCenter"
            android:layout_marginLeft="140dp" />


        <ImageView
            android:id="@+id/plus_photo"
            android:layout_width="43dp"
            android:layout_height="31dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="-40dp"
            app:srcCompat="@drawable/add" />

        <TextView
            android:id="@+id/account_text1"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:text="@string/app_in_famname"
            android:textColor="@color/darkgrey"
            android:textSize="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-1dp"
            android:textStyle="normal"
            android:layout_marginStart="60dp"/>

        <EditText
            android:id="@+id/account_name1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/account_name1"
            android:layout_marginStart="60dp"/>

        <TextView
            android:id="@+id/account_text2"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:text="@string/app_in_fam"
            android:textColor="@color/darkgrey"
            android:textSize="14dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="-1dp"
            android:textStyle="normal"
            android:layout_marginStart="60dp"/>
        <EditText
            android:id="@+id/account_name2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/account_name2"
            android:layout_marginStart="60dp"/>

        <TextView
            android:id="@+id/account_text3"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:text="@string/account_nomer"
            android:textColor="@color/darkgrey"
            android:textSize="14dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="-1dp"
            android:textStyle="normal"
            android:layout_marginStart="60dp"/>

        <EditText
            android:id="@+id/account_name3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_phone_name3"
            android:layout_marginStart="60dp"/>

        <Button
            android:id="@+id/account_zareg"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginStart="110dp"
            android:background="@drawable/gradient"
            android:text="@string/account_sohr"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>