<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registracia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/registr"
            android:layout_marginLeft="125dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="133dp"
            android:layout_height="30dp"
            android:text="@string/app_in_registr"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:textStyle="normal"
            android:layout_marginStart="135dp"/>

        <EditText
            android:id="@+id/text1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_phone_name2"
            android:inputType="phone"
            android:layout_marginStart="70dp"/>

        <EditText
            android:id="@+id/text2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_in_fam"
            android:layout_marginStart="70dp"/>
        <EditText
            android:id="@+id/text3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_in_famname"
            android:layout_marginStart="70dp"/>

        <EditText
            android:id="@+id/text4"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/button3"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_passw_name"
            android:inputType="textPassword"
            android:layout_marginStart="70dp"/>

        <EditText
            android:id="@+id/text5"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/button3"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:layout_marginBottom="50dp"
            android:text="@string/app_passw_name"
            android:inputType="textPassword"
            android:layout_marginStart="70dp"/>

        <Button
            android:id="@+id/register1"
            android:layout_width="239dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:background="@drawable/gradient"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/app_in_registr2"
            android:textAllCaps="false"
            android:textStyle="normal"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>