<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="173dp"
            android:layout_height="153dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/nopassw" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/app_in_nowpassw"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/password_phone_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_gravity="start"
            android:layout_marginStart="70dp"
            android:visibility="gone"
            android:text="" />

        <EditText
            android:id="@+id/password_phone_edit"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/app_phone_name2"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:layout_marginBottom="60dp"
            android:text="@string/app_in_nowpassw1"
            android:textColor="@color/darkgrey"
            android:textSize="13dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/phone_next_button"
            android:layout_width="239dp"
            android:layout_height="50dp"
            android:background="@drawable/gradient"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/app_in_nowpasswdalee"
            android:textAllCaps="false"
            android:textStyle="normal"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>