<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistraciaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/registr" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/app_in_code"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/sms_code_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="Не верный код" />

        <EditText
            android:id="@+id/sms_code"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:textAlignment="center"
            android:layout_marginBottom="35dp"
            android:hint="@string/app_code_name"
            android:inputType="number"
            android:maxLength="4"/>

        <Button
            android:id="@+id/send_sms_code"
            android:layout_width="239dp"
            android:layout_height="50dp"
            android:background="@drawable/gradient"
            android:text="@string/app_code_send_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>