<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="173dp"
            android:layout_height="153dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/nopassw" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/app_in_nowpassw"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/reset_password1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="50dp"
            android:hint="@string/app_new_passwrod_name"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/reset_password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/red"
            android:layout_marginStart="80dp"
            android:visibility="gone"
            android:text="Пароли не совпадают" />

        <EditText
            android:id="@+id/reset_password2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_above="@+id/text2"
            android:textSize="15dp"
            android:layout_marginBottom="31dp"

            android:hint="@string/app_repeat_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/send_new_password_button"
            android:layout_width="239dp"
            android:layout_height="50dp"
            android:background="@drawable/gradient"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="Отправить"
            android:textAllCaps="false"
            android:textStyle="normal"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>