<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Homepage">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constaint_"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-631dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/menu" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="97dp"
                android:layout_height="62dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logotip" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="97dp"
                android:layout_height="68dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ellipse1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="95dp"
                android:background="@color/gray" />


            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="155dp"
                android:layout_height="127dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="450dp"
                app:srcCompat="@drawable/ellipse1_1" />

            <LinearLayout
                android:layout_width="390dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="647dp"
                android:background="@drawable/gradient2"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/human1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_transparent"
                    android:drawableTop="@drawable/ic_human"
                    android:text="@string/app_in_services"
                    android:textAllCaps="false"
                    android:drawablePadding="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/plus1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_transparent"
                    android:drawableTop="@drawable/ic_plus"
                    android:drawablePadding="15dp"
                    android:text="@string/app_in_services1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/catalog1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_transparent"
                    android:drawableTop="@drawable/ic_catalog"
                    android:drawablePadding="15dp"
                    android:text="@string/app_in_services2"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/dom1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_transparent"
                    android:drawableTop="@drawable/ic_dom"
                    android:drawablePadding="15dp"

                    android:text="@string/app_in_services3"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

<!--            <pl.droidsonroids.gif.GifImageView-->
<!--                android:id="@+id/gif_image"-->
<!--                android:layout_width="218dp"-->
<!--                android:layout_height="283dp"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                android:layout_marginEnd="100dp"-->
<!--                android:layout_marginBottom="900dp"-->
<!--                android:src="@drawable/baby" />-->



        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_menu"
        app:menu="@menu/menu"
        android:fitsSystemWindows="true">

        <!-- Декоративные элементы внизу NavigationView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="-40dp"
                android:src="@drawable/ellipse_2_1" />
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ellipse_2_2" />
            <ImageView
                android:layout_width="117dp"
                android:layout_height="151dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ellipse_2_3" />
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>